# realbook-search

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
api/: Cargo.toml
api/resources/: realbook.json
api/src/: controller.rs  main.rs  models.rs
docs/: ARCHITECTURE.md  AUDIT.md  AWS_MIGRATION_PLAN.md  DEVELOPMENT.md  PATTERNS.md  WORKFLOWS.md
reviews/: phase-1-completion.md  phase-2-completion.md
scripts/: audit-docs.sh  milestone-review.sh  phase-check.sh
ui/: Cargo.toml  Trunk.toml  index.html
ui/src/: api.rs  main.rs  models.rs  utils.rs
ui/src/components/: header.rs  mod.rs  results_list.rs  search_input.rs  sheet_image.rs  sheet_viewer.rs
