[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.25", default-features = false, features = ["json"] }
yew = { version = "0.22.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-events = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "InputEvent", "Document", "Window", "KeyboardEvent", "Element", "Event", "EventTarget", "ScrollIntoViewOptions", "ScrollLogicalPosition", "ScrollBehavior"] }
